# telemetry-batteries

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  EYRE_INTEGRATION.md  README.md  build.rs  deny.toml  release-plz.toml
.github/workflows/: ci.yml  release-crates.yml  relyance-sci.yml
docker/datadog/: .env.example  README.md  compose.yml
docker/grafana/: README.md  compose.yml
docker/grafana/alloy/: config.alloy
docker/grafana/grafana/: datasources.yml
docker/grafana/loki/: loki-config.yml
docker/grafana/prometheus/: prometheus.yml
docker/grafana/promtail/: promtail-config.yml
examples/: axum_tracing.rs  basic.rs  custom_tracing.rs  custom_tracing_battery.rs  datadog.rs  panic_example.rs
src/: config.rs  error.rs  lib.rs  panic_hook.rs  top_level.rs
src/eyre/: json_eyre.rs  mod.rs
src/metrics/: batteries.rs  mod.rs  prometheus.rs  statsd.rs
src/metrics_batteries/: mod.rs
src/tracing/: batteries.rs  datadog.rs  id_generator.rs  middleware.rs  mod.rs  reqwest.rs  stdout.rs
src/tracing/batteries/: datadog.rs  mod.rs
src/tracing/layers/: datadog.rs  mod.rs
src/tracing_batteries/: datadog.rs  mod.rs
telemetry-batteries/: Cargo.toml  build.rs
telemetry-batteries-macros/: Cargo.toml
telemetry-batteries-macros/examples/: datadog.rs  statsd.rs
telemetry-batteries-macros/src/: lib.rs
telemetry-batteries-macros/src/metrics/: statsd.rs
telemetry-batteries-macros/src/tracing/: datadog.rs
telemetry-batteries/examples/: axum_tracing.rs  basic.rs  custom_tracing.rs  datadog.rs  prometheus.rs
telemetry-batteries/src/: config.rs  error.rs  guard.rs  lib.rs
telemetry-batteries/src/eyre/: json_eyre.rs  mod.rs
telemetry-batteries/src/json_eyre/: mod.rs
telemetry-batteries/src/metrics/: mod.rs  prometheus.rs
telemetry-batteries/src/tracing/: datadog.rs  id_generator.rs  middleware.rs  mod.rs  stdout.rs
telemetry-batteries/src/tracing/layers/: datadog.rs  stdout.rs
tests/: datadog_integration.rs
