[package]
name = "telemetry-batteries"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html]

[dependencies]
chrono = "0.4.31"
dirs = "5.0.1"
http = "0.2.9"
metrics = "0.21.1"
metrics-exporter-statsd = "0.6.0"
opentelemetry = { version = "0.20.0", features = ["rt-tokio"] }
opentelemetry-datadog = { version = "0.8.0", features = ["reqwest-client"] }
opentelemetry-http = "0.9.0"
serde = "1.0.189"
serde_json = "1.0.108"
thiserror = "1.0.50"
tokio = "1.33.0"
tracing = "0.1.40"
tracing-appender = "0.2.2"
tracing-opentelemetry = "0.21.0"
tracing-serde = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }

[dev-dependencies]
eyre = "0.6.8"
