[package]
name = "telemetry-batteries-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.60"
quote = "1"
syn = { version = "2.0", features = ["full"] }
telemetry-batteries = { path = "../telemetry-batteries" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }

[dev-dependencies]
tracing = "0.1.40"
metrics = "0.22.1"
eyre = "0.6.12"
tokio = { version = "1.36.0", features = ["macros"] }
