[package]
name = "telemetry-batteries-macros"
version = "0.1.0"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.60"
quote = "1"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
telemetry-batteries = { path = "../telemetry-batteries" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
tracing = "0.1.40"
metrics = "0.24"
eyre = "0.6.12"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
