[package]
name = "telemetry-batteries-macros"

version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
tracing.workspace = true
metrics.workspace = true
eyre.workspace = true
tokio.workspace = true
