[package]
name = "telemetry-batteries"
version = "0.1.1"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["metrics-prometheus", "metrics-statsd", "rustls"]
metrics-statsd = ["dep:metrics-exporter-statsd"]
metrics-prometheus = ["dep:metrics-exporter-prometheus"]
rustls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]

[dependencies]
chrono = "0.4"
dirs = "5"
http = "1"
metrics = "0.24"
metrics-exporter-statsd = { version = "0.9", optional = true }
metrics-exporter-prometheus = { version = "0.16", optional = true }
opentelemetry = { version = "0.26" }
opentelemetry-datadog = { version = "0.14", features = ["reqwest-client"] }
opentelemetry-http = "0.26"
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"] }
reqwest = { version = "0.12", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-opentelemetry = "0.27"
tracing-serde = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rand = "0.8"

[dev-dependencies]
eyre = "0.6"
