[package]
name = "telemetry-batteries"

version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[features]
default = ["metrics-prometheus", "metrics-statsd", "rustls"]
metrics-statsd = ["dep:metrics-exporter-statsd"]
metrics-prometheus = ["dep:metrics-exporter-prometheus"]
rustls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]

[dependencies]
backtrace.workspace = true
chrono.workspace = true
dirs.workspace = true
eyre.workspace = true
http.workspace = true
metrics.workspace = true
metrics-exporter-statsd = { workspace = true, optional = true }
metrics-exporter-prometheus = { workspace = true, optional = true }
opentelemetry.workspace = true
opentelemetry-datadog.workspace = true
opentelemetry-http.workspace = true
opentelemetry_sdk.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-error.workspace = true
tracing-opentelemetry.workspace = true
tracing-serde.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true

[dev-dependencies]
anyhow.workspace = true
